--- a/products.html
+++ b/products.html
@@ -37,10 +37,12 @@
     </div>
   </nav>
   <main class="pb-5 container">
+    <div class="text-center p-4">
+    <h1>Productos</h1>
+    <p>Verás aqui todos los productos de la categoria Autos</p>
+    </div>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+        <div class="list-group" id="cat-list-container"></div>
     </div>
   </main>
   <footer class="text-muted">
@@ -51,6 +53,7 @@
       <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
     </div>
   </footer>
+
   <div id="spinner-wrapper">
     <div class="lds-ring">
       <div></div>
