--- a/products.html
+++ b/products.html
@@ -39,11 +39,12 @@
   </nav>
   <main class="pb-5 container">
     <div class="text-center p-4">
-    <h1>Productos</h1>
-    <p>Verás aqui todos los productos de la categoria Autos</p>
+      <h1>Productos</h1>
+      <p>Verás aqui todos los productos de la categoria Autos</p>
     </div>
     <div class="container">
-        <div class="list-group" id="cat-list-container"></div>
+      <div class="list-group" id="cat-list-container">
+      </div>
     </div>
   </main>
   <footer class="text-muted">
@@ -51,7 +52,8 @@
       <p class="float-end">
         <a href="#">Volver arriba</a>
       </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
+      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a>
+      </p>
     </div>
   </footer>
 
