--- a/products.html
+++ b/products.html
@@ -21,7 +21,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-between">
+        <ul class="navbar-nav w-100 justify-content-between align-items-center">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Inicio</a>
           </li>
@@ -33,7 +33,23 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <span id="username" class = "nav-link"></span>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle d-flex align-items-center" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                <span id="username" class = "nav-link"></span>
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
+                <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
+                <li><a class="dropdown-item" href="login.html">Cerrar sesión</a></li>
+                <li>   <div class="switch-container justify-content-center">
+                  <label class="switch">
+                    <input type="checkbox" id="darkModeSwitch">
+                    <span class="slider round "></span>
+                  </label>
+                  <span id="modeLabel"></span>
+                </div> </li>
+              </ul>
+            </div>
           </li>
         </ul>
       </div>
@@ -46,8 +62,14 @@
       <input type="search" id="filtrado" placeholder="Búsqueda">
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col text-end">
+      <div class="row d-flex justify-content-center">
+        <div class="col text-end d-flex gap-3 max-width justify-content-center">
+          <div class="col ">
+            <input class="form-control" type="number" placeholder="mín." id="rangeFilterCountMin">
+          </div>
+          <div class="col">
+            <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
+          </div>
           <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
             <input type="radio" class="btn-check" name="options" id="sortDesc">
             <label class="btn btn-light" for="sortDesc">$↓</label>
@@ -59,27 +81,15 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
-          <div class="row container p-0 m-0">
-            <div class="col">
-              <p class="font-weight-normal text-end my-2">Cant.</p>
-            </div>
-            <div class="col">
-              <input class="form-control" type="number" placeholder="mín." id="rangeFilterCountMin">
-            </div>
-            <div class="col">
-              <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
-            </div>
-            <div class="col-3 p-0">
+        <div class="col-12 mb-1 container d-flex justify-content-center">
+            <div class="p-0 mb-3">
               <div class="btn-group" role="group">
                 <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
                 <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
               </div>
             </div>
-          </div>
-        </div>
       </div>
-      <div class="row">
+      <div class="row m-0">
         <div class="list-group" id="cat-list-container">
         </div>
       </div>
