--- a/sell.html
+++ b/sell.html
@@ -20,7 +20,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-between">
+        <ul class="navbar-nav w-100 justify-content-between align-items-center">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Inicio</a>
           </li>
@@ -32,7 +32,25 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <span id="username" class = "nav-link"></span>
+            
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle d-flex align-items-center" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                <span id="username" class = "nav-link"></span>
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="cart.html">Mi Carrito</a></li>
+                <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
+                <li><a class="dropdown-item" href="login.html">Cerrar sesión</a></li>
+                <li>   <div class="switch-container justify-content-center">
+                  <label class="switch">
+                    <input type="checkbox" id="darkModeSwitch">
+                    <span class="slider round "></span>
+                  </label>
+                  <span id="modeLabel"></span>
+                </div> </li>
+              </ul>
+            </div>
+
           </li>
         </ul>
       </div>
@@ -165,7 +183,7 @@
             </li>
           </ul>
           <hr class="mb-4">
-          <button class="btn btn-primary btn-lg" type="submit">Vender</button>
+          <button class="btn btn-lg" id="sellbtn" type="submit">Vender</button>
         </form>
       </div>
     </div>
